Fix up some spacing issues, changes based on PR feedback. Add in filtering for service items going into modal.

--- a/src/components/Office/shipmentApprovalPreview.module.scss
+++ b/src/components/Office/shipmentApprovalPreview.module.scss
@@ -13,6 +13,7 @@
 
 .previewShipments {
   @include u-margin-left(0);
+  @include u-margin-right(0);
 }
 
 .customerName {
@@ -30,6 +31,8 @@
 
 .previewContainer {
   @include u-padding-top(0);
+  @include u-padding-left(4);
+  @include u-padding-right(4);
   border-radius: 3px;
   border: 1px solid #dfe1e2;
 
